--- a/LearnVulkan/LearnVulkan.vcxproj
+++ b/LearnVulkan/LearnVulkan.vcxproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h" />
+    <ClInclude Include="src\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\base.frag" />
