--- a/LearnVulkan/LearnVulkan.vcxproj.filters
+++ b/LearnVulkan/LearnVulkan.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="src\Application.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\stb_image.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\base.vert" />
