--- a/LearnVulkan/LearnVulkan.vcxproj.filters
+++ b/LearnVulkan/LearnVulkan.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="src\Application.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\deferred\DeferredApp.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\stb_image.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\deferred\DeferredApp.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
